--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -13,5 +13,7 @@
   --light-gray: #f5f5f5;
   --light-secondary-color: #fff8f3;
   --secondary-color: #ffc08d;
+  --content-width: 900px;
+  --article-width: 900px;
 }
 
